--- a/templates/dashboard/base.html
+++ b/templates/dashboard/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html :class="{ 'theme-dark': dark }" x-data="data()" lang="en">
 
@@ -8,21 +9,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap"
         rel="stylesheet" />
 
-    <!-- Reemplace por la ruta estática -->
-    <link rel="stylesheet" href="../../static/css/tailwind.output.css" />
-
+    <!-- Archivos estáticos Django -->
+    <link rel="stylesheet" href="{% static 'css/tailwind.output.css' %}" />
 
     <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
 
-    <!-- Reemplace por la ruta estática -->
-    <script src="../../static/js/init-alpine.js"></script>
-
+    <script src="{% static 'js/init-alpine.js' %}"></script>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js" defer></script>
 
-    <!-- Reemplace por la ruta estática -->
-    <script src="../../static/js/charts-lines.js" defer></script>
+    <script src="{% static 'js/charts-lines.js' %}" defer></script>
 
 </head>
 
